Fix missing padding on reviews paginator (bug 936158)

--- a/hearth/media/css/paginator.styl
+++ b/hearth/media/css/paginator.styl
@@ -47,7 +47,8 @@
     text-align: center;
 }
 
-.listing .loadmore {
+.listing .loadmore,
+.reviews-listing .loadmore {
     height: auto;
     min-height: 78px;
 }
